--- a/UID Soulbound/Frontend/my-app/package.json
+++ b/UID Soulbound/Frontend/my-app/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "api": "^6.1.0",
+    "axios": "^1.4.0",
     "ethers": "^5.7.2",
     "persona": "^4.9.0",
     "react": "^18.2.0",
